--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -1,18 +1,17 @@
-<div>
-    <h2>
-        <h2>{{ hero.name | uppercase }} Details</h2>
-        <div>Name: <span>{{ hero.name }}</span></div>
-        <div>Id: <span>{{ hero.id }}</span></div>
-        <div>
-            <div>
-                <label for="name">Hero's name: </label>
-                <input id="name" type="text" [(ngModel)]="hero.name">
-            </div>
+<h2>My Heroes</h2>
+<ul class="heroes">
+  <li *ngFor="let hero of heroes" (click)="onSelectHero(hero)" [class.selected]="hero == selectedHero">
+    <span class="badge">{{hero.id}}</span> {{hero.name}}
+  </li>
+</ul>
 
-            <div>
-                <label for="id">Hero's id: </label>
-                <input id="id" type="text" [(ngModel)]="hero.id">
-            </div>
-        </div>
-    </h2>
+
+<div *ngIf="onSelectHero">
+    <h2>{{ selectedHero.name }} Details</h2>
+
+    <div>Name: <span>{{ selectedHero.name }}</span></div>
+    <div>Id: <span>{{ selectedHero.id }}</span></div>
+
+    <label for="name">Name: </label>
+    <input type="text" [(ngModel)]="selectedHero.name">
 </div>
