Separando o hero details em seu próprio componente passando o dado do componente pai para o componente filho

--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -7,11 +7,5 @@
 
 
 <div *ngIf="onSelectHero">
-    <h2>{{ selectedHero.name }} Details</h2>
-
-    <div>Name: <span>{{ selectedHero.name }}</span></div>
-    <div>Id: <span>{{ selectedHero.id }}</span></div>
-
-    <label for="name">Name: </label>
-    <input type="text" [(ngModel)]="selectedHero.name">
+    <app-herodetails [selectedHeroInput]="selectedHero"></app-herodetails>
 </div>
