Adicionando menssagens conforme os heroes são comunicados ao hero component injetando um serviço em outro serviço

--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -8,4 +8,5 @@
 
 <div *ngIf="onSelectHero">
     <app-herodetails [selectedHeroInput]="selectedHero"></app-herodetails>
+    <app-messages></app-messages>
 </div>
