Limitando na hora que a requisição é feita, para que apenas a quantidade de elementos que vou usar sejam requisitados

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,5 +1,7 @@
-<div>My Top Heroes</div>
+<h2>My Top Heroes</h2>
 
-<div *ngFor="let hero of heroes | slice:0:4 ; index as i">
-    <h2>{{hero.name}}</h2>
+<div class="heroes-menu">
+    <a *ngFor="let hero of heroes">
+        {{hero.name}}
+    </a>
 </div>
