--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <h2>My Top Heroes</h2>
 
 <div class="heroes-menu">
-    <a *ngFor="let hero of heroes">
+    <a *ngFor="let hero of heroes" [routerLink]="['/heroDetails', hero.id]">
         {{hero.name}}
     </a>
 </div>
