--- a/src/app/components/herodetails/herodetails.component.html
+++ b/src/app/components/herodetails/herodetails.component.html
@@ -1,7 +1,9 @@
-<h2>{{ selectedHeroInput.name | uppercase }} Details</h2>
+<div *ngIf="hero">
+    <h2>{{ hero.name | uppercase }} Details</h2>
 
-<div>Name: <span>{{ selectedHeroInput.name }}</span></div>
-<div>Id: <span>{{ selectedHeroInput.id }}</span></div>
+    <div>Name: <span>{{ hero.name }}</span></div>
+    <div>Id: <span>{{ hero.id }}</span></div>
 
-<label for="name">Name: </label>
-<input type="text" [(ngModel)]="selectedHeroInput.name">
+    <label for="name">Name: </label>
+    <input type="text" [(ngModel)]="hero.name" placeholder="Hero name">
+</div>
