--- a/src/app/components/herodetails/herodetails.component.html
+++ b/src/app/components/herodetails/herodetails.component.html
@@ -7,3 +7,7 @@
     <label for="name">Name: </label>
     <input type="text" [(ngModel)]="hero.name" placeholder="Hero name">
 </div>
+
+<div>
+    <button (click)="previousComponent()">Back</button>
+</div>
