--- a/src/app/components/herodetails/herodetails.component.html
+++ b/src/app/components/herodetails/herodetails.component.html
@@ -11,3 +11,7 @@
 <div>
     <button (click)="previousComponent()">Back</button>
 </div>
+
+<div>
+    <button (click)="save()">Save</button>
+</div>
