--- a/src/app/components/herodetails/herodetails.component.html
+++ b/src/app/components/herodetails/herodetails.component.html
@@ -6,12 +6,7 @@
 
     <label for="name">Name: </label>
     <input type="text" [(ngModel)]="hero.name" placeholder="Hero name">
-</div>
-
-<div>
-    <button (click)="previousComponent()">Back</button>
-</div>
-
-<div>
-    <button (click)="save()">Save</button>
+    
+    <button (click)="goBack()">go Back</button>
+    <button (click)="save()">save</button>  
 </div>
